service-saludo.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplomado-saludo
  labels:
    app: diplomado-saludo
spec:
  type: LoadBalancer
  selector:
    app: diplomado-saludo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
